--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -77,7 +77,8 @@
         "no_models": "No models found matching your criteria.",
         "edit_tooltip": "Edit Model Metadata & Hotspots",
         "optimize_tooltip": "Auto-Optimize with AI",
-        "delete_tooltip": "Delete Model"
+        "delete_tooltip": "Delete Model",
+        "confirm_delete": "Are you sure you want to delete \"{{name}}\"? This action cannot be undone."
     },
     "help": {
         "title": "How to use THE GEAR",
@@ -662,7 +663,8 @@
             "errors": {
                 "upload_failed": "Image upload failed",
                 "update_failed": "Failed to update profile"
-            }
+            },
+            "success_update": "Profile updated successfully!"
         },
         "password": {
             "title": "Change Password",
